--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <test.include>%regex[.*.class]</test.include>
     <truth.version>0.35</truth.version>
     <animal.sniffer.version>1.14</animal.sniffer.version>
+    <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
   </properties>
   <issueManagement>
     <system>GitHub Issues</system>
@@ -83,7 +84,26 @@
         </excludes>
       </testResource>
     </testResources>
-
+    <plugins>
+      <plugin>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>${maven-javadoc-plugin.version}</version>
+      </plugin>
+    <plugin>
+                <groupId>edu.illinois</groupId>
+                <artifactId>starts-maven-plugin</artifactId>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <id>starts</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>starts</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -144,7 +164,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.0.0</version>
+          <version>${maven-javadoc-plugin.version}</version>
           <configuration>
             <quiet>true</quiet>
             <notimestamp>true</notimestamp>
@@ -200,23 +220,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
-  <plugins>
-            <plugin>
-                <groupId>edu.illinois</groupId>
-                <artifactId>starts-maven-plugin</artifactId>
-                <version>1.4</version>
-                <executions>
-                    <execution>
-                        <id>starts</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>starts</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+  </build>
   <distributionManagement>
     <site>
       <id>guava-site</id>
